--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-					<h2 class="footer-heading">Unicare.</h2>
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+					<h2 class="footer-heading">Swizimtrust</h2>
+					<p>Our vision reflects our strong commitment and successful history in building resilient communities through holistic approaches, addressing challenges like poverty, inequality, and social injustice.</p>
 					<ul class="ftco-footer-social p-0">
 						<li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
 						<li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
@@ -456,11 +456,11 @@
 					<p><a href="#" class="btn btn-quarternary">Donate Now</a></p>
 				</div>
 				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-					<h2 class="footer-heading">Latest News</h2>
+					<h2 class="footer-heading">Latest Blog</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
+						<a class="img mr-4 rounded" style="background-image: url(images/blog-img2.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+							<h3 class="heading"><a href="#">Breaking the Stigma: Empowering Menstrual Health and Well-being</a></h3>
 							<div class="meta">
 								<div><a href="#">Jul 20, 2020</a></div>
 								<div><a href="#">Admin</a></div>
@@ -469,9 +469,9 @@
 						</div>
 					</div>
 					<div class="block-21 mb-4 d-flex">
-						<a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
+						<a class="img mr-4 rounded" style="background-image: url(images/blog-img1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+							<h3 class="heading"><a href="#">Unleashing Potential: A Remarkable Journey at the Bulawayo nook center</a></h3>
 							<div class="meta">
 								<div><a href="#">Jul 20, 2020</a></div>
 								<div><a href="#">Admin</a></div>
@@ -486,7 +486,7 @@
 						<li><a href="#" class="py-2 d-block">Home</a></li>
 						<li><a href="#" class="py-2 d-block">About</a></li>
 						<li><a href="#" class="py-2 d-block">Causes</a></li>
-						<li><a href="#" class="py-2 d-block">New Campaigns</a></li>
+						<li><a href="#" class="py-2 d-block">Our Team</a></li>
 						<li><a href="#" class="py-2 d-block">Blog</a></li>
 						<li><a href="#" class="py-2 d-block">Contact</a></li>
 					</ul>
@@ -495,9 +495,9 @@
 					<h2 class="footer-heading">Have a Questions?</h2>
 					<div class="block-23 mb-3">
 						<ul>
-							<li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+							<li><span class="icon fa fa-map"></span><span class="text">	Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe</span></li>
 							<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-							<li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">info@yourdomain.com</span></a></li>
+							<li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">admin@swizimtrust.com</span></a></li>
 						</ul>
 					</div>
 				</div>
