--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Unicare - Free Bootstrap 4 Template by Colorlib</title>
+  <title>Swizimtrust</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -48,7 +48,7 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
  <div class="container">
-   <a class="navbar-brand" href="index.html">Unicare</a>
+   <a class="navbar-brand" href="index.html">Swizimtrust</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
      <span class="oi oi-menu"></span> Menu
    </button>
@@ -71,7 +71,7 @@
 <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
-    <div class="row no-gutters slider-text align-items-end">
+    <div class="row no-gutters slider-text justify-content-center"></div>
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>About us <i class="ion-ios-arrow-forward"></i></span></p>
        <h1 class="mb-0 bread">About Us</h1>
@@ -82,17 +82,18 @@
 
 <section class="ftco-section ftco-no-pt ftco-no-pb">
  <div class="container">
-  <div class="row d-flex no-gutters">
+  <div class="row d-flex no-gutters justify-content-center">
    <div class="col-md-6 d-flex order-md-last">
     <div class="img img-video d-flex align-self-stretch align-items-center justify-content-center justify-content-md-center mb-4 mb-sm-0" style="background-image:url(images/about-1.jpg);">
     </div>
   </div>
-  <div class="col-md-6 pr-md-5 py-md-5">
+  <div class="col-md-6 pr-md-5 py-md-5 text-center">
     <div class="heading-section pt-md-5 mb-4">
      <span class="subheading">About us</span>
-     <h2 class="mb-2">Give a helping hand to a needy people</h2>
-     <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-     <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+     <h2 class="mb-2">Who Are We?</h2>
+     <p>We are a dynamic for impact organization committed to fostering holistic community-impact in Zimbabwe.</p>
+     <p>We strive to uplift the lives of vulnerable and underprivilege individuals, catalyzing positve change, not only for them but for their entire communities.</p>
+     <p>Through innovative and sustainable approaches, we address pressing social issues such as poverty, health disparities, and educational inequities, working tirelessly to create a future where every individual has the opportunity to thrive.</p>
      <p><a href="#" class="btn btn-secondary">Become a Volunteer</a></p>
    </div>
  </div>
@@ -104,37 +105,37 @@
  <div class="container">
   <div class="row justify-content-center pb-5">
     <div class="col-md-7 heading-section text-center ftco-animate">
-     <span class="subheading">Welcome to Unicare</span>
-     <h2>We Believe that We Can Save More Lifes with You</h2>
+     <span class="subheading">Welcome to Swizimtrust</span>
+     <h2>We are a dynamic organization dedicated to creating holistic community impact in Zimbabwe.</h2>
    </div>
  </div>
  <div class="row">
   <div class="col-md-3 services-2 w-100 text-center">
    <div class="icon icon-1 d-flex align-items-center justify-content-center"><span class="flaticon-water-drop"></span></div>
    <div class="text">
-    <h4>Water</h4>
-    <p>Far far away, behind the word mountains, far from the countries.</p>
+    <h4>Smart Agriculture & Sustainability</h4>
+    <p>We promote sustainable, climate-smart agricultural practices to improve food security and income, conserve natural resources, and empower farmers with the knowledge and tools needed for long-term productivity and resilience.</p>
   </div>
 </div>
 <div class="col-md-3 services-2 w-100 text-center">
  <div class="icon icon-2 d-flex align-items-center justify-content-center"><span class="flaticon-stethoscope"></span></div>
  <div class="text">
-  <h4>Medical</h4>
-  <p>Far far away, behind the word mountains, far from the countries.</p>
+  <h4>Psycho-social support</h4>
+  <p>We prioritize both material and psychosocial needs, creating spaces where individuals receive essential resources and emotional support to reach their full potential and lead fulfilling lives.</p>
 </div>
 </div>
 <div class="col-md-3 services-2 w-100 text-center">
  <div class="icon icon-3 d-flex align-items-center justify-content-center"><span class="flaticon-bread"></span></div>
  <div class="text">
-  <h4>Food</h4>
-  <p>Far far away, behind the word mountains, far from the countries.</p>
+  <h4>Community Health & Safety</h4>
+  <p>We prioritize community well-being through health and safety programs, including menstrual health education, support for single mothers and pregnant teens, and assistance for child-headed homes to ensure children's access to education.</p>
 </div>
 </div>
 <div class="col-md-3 services-2 w-100 text-center">
  <div class="icon icon-4 d-flex align-items-center justify-content-center"><span class="flaticon-university"></span></div>
  <div class="text">
-  <h4>Education</h4>
-  <p>Far far away, behind the word mountains, far from the countries.</p>
+  <h4>Entrepreneurship & Social</h4>
+  <p>We empower individuals through entrepreneurship training and education at our Nooks, providing skills, mentorship, and practical knowledge to help them succeed and create sustainable livelihoods.</p>
 </div>
 </div>
 </div>
@@ -145,7 +146,7 @@
  <div class="container">
   <div class="row">
    <div class="col-md-3 mb-5 mb-md-0 text-center text-md-left">
-    <h2 class="font-weight-bold" style="color: #fff; font-size: 22px;">We're on a mission to help all your problems</h2>
+    <h2 class="font-weight-bold" style="color: #fff; font-size: 22px;">Our impact in numbers</h2>
     <a href="#" class="btn btn-white btn-outline-white">Donate Now</a>
   </div>
   <div class="col-md-9">
@@ -153,40 +154,40 @@
       <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
         <div class="block-18 text-center">
           <div class="text">
-            <strong class="number" data-number="88984">0</strong>
+            <strong class="number" data-number="32000">20</strong>
           </div>
           <div class="text">
-           <span>Donation Campaigns are running</span>
+           <span>Lives impacted</span>
          </div>
        </div>
      </div>
      <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
       <div class="block-18 text-center">
         <div class="text">
-          <strong class="number" data-number="65000">0</strong>
+          <strong class="number" data-number="350000">0</strong>
         </div>
         <div class="text">
-         <span>Professional and kind volunteers</span>
+         <span>Meals provided</span>
        </div>
      </div>
    </div>
    <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
     <div class="block-18 text-center">
       <div class="text">
-        <strong class="number" data-number="77000">0</strong>
+        <strong class="number" data-number="259">0</strong>
       </div>
       <div class="text">
-       <span>Funds we raised till now on site</span>
+       <span>Entrepreneurs</span>
      </div>
    </div>
  </div>
  <div class="col-md-6 col-lg-3 d-flex justify-content-center counter-wrap ftco-animate">
   <div class="block-18 text-center">
     <div class="text">
-      <strong class="number" data-number="50">0</strong>
+      <strong class="number" data-number="1">0</strong>
     </div>
     <div class="text">
-     <span>Dedicated Donors</span>
+     <span>Person at a time</span>
    </div>
  </div>
 </div>
@@ -195,145 +196,6 @@
 </div>
 </div>
 </section>
-
-<section class="ftco-section testimony-section">
- <div class="overlay"></div>
- <div class="container">
-  <div class="row justify-content-center pb-5">
-    <div class="col-md-7 heading-section heading-section-white text-center ftco-animate">
-     <span class="subheading">Testimony</span>
-     <h2>Happy Clients &amp; Feedbacks</h2>
-   </div>
- </div>
- <div class="row ftco-animate">
-  <div class="col-md-12">
-    <div class="carousel-testimony owl-carousel">
-     <div class="item">
-      <div class="testimony-wrap d-flex">
-        <div class="user-img" style="background-image: url(images/person_1.jpg)">
-        </div>
-        <div class="text pl-4">
-         <span class="quote d-flex align-items-center justify-content-center">
-          <i class="fa fa-quote-left"></i>
-        </span>
-        <p class="rate">
-         <span class="fa fa-star"></span>
-         <span class="fa fa-star"></span>
-         <span class="fa fa-star"></span>
-         <span class="fa fa-star"></span>
-         <span class="fa fa-star"></span>
-       </p>
-       <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-       <p class="name">Racky Henderson</p>
-       <span class="position">Father</span>
-     </div>
-   </div>
- </div>
- <div class="item">
-  <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/person_2.jpg)">
-    </div>
-    <div class="text pl-4">
-     <span class="quote d-flex align-items-center justify-content-center">
-      <i class="fa fa-quote-left"></i>
-    </span>
-    <p class="rate">
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-   </p>
-   <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-   <p class="name">Henry Dee</p>
-   <span class="position">Businesswoman</span>
- </div>
-</div>
-</div>
-<div class="item">
-  <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/person_3.jpg)">
-    </div>
-    <div class="text pl-4">
-     <span class="quote d-flex align-items-center justify-content-center">
-      <i class="fa fa-quote-left"></i>
-    </span>
-    <p class="rate">
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-   </p>
-   <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-   <p class="name">Mark Huff</p>
-   <span class="position">Businesswoman</span>
- </div>
-</div>
-</div>
-<div class="item">
-  <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/person_4.jpg)">
-    </div>
-    <div class="text pl-4">
-     <span class="quote d-flex align-items-center justify-content-center">
-      <i class="fa fa-quote-left"></i>
-    </span>
-    <p class="rate">
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-   </p>
-   <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-   <p class="name">Benjie Busk Jr.</p>
-   <span class="position">Businesswoman</span>
- </div>
-</div>
-</div>
-<div class="item">
-  <div class="testimony-wrap d-flex">
-    <div class="user-img" style="background-image: url(images/person_1.jpg)">
-    </div>
-    <div class="text pl-4">
-     <span class="quote d-flex align-items-center justify-content-center">
-      <i class="fa fa-quote-left"></i>
-    </span>
-    <p class="rate">
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-     <span class="fa fa-star"></span>
-   </p>
-   <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-   <p class="name">Ken Bosh</p>
-   <span class="position">Businesswoman</span>
- </div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</section>
-
-<section class="ftco-hireme bg-secondary">
- <div class="container">
-  <div class="row justify-content-between">
-   <div class="col-md-8 col-lg-8 d-flex align-items-center">
-    <div class="w-100">
-     <h2>Best Way to Make a Difference in the Lives of Others</h2>
-   </div>
- </div>
- <div class="col-md-4 col-lg-4 d-flex align-items-center justify-content-end">
-  <p class="mb-0"><a href="#" class="btn btn-primary py-3 px-4">Become A Volunteer</a></p>
-</div>
-</div>
-</div>
-</section>
-
 
 <footer class="footer">
  <div class="container">
