--- a/causes.html
+++ b/causes.html
@@ -56,19 +56,19 @@
    <div class="collapse navbar-collapse" id="ftco-nav">
      <ul class="navbar-nav ml-auto">
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-       <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-       <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
        <li class="nav-item active"><a href="causes.html" class="nav-link">Causes</a></li>
        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-       <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
        <li class="nav-item cta"><a href="contact.html" class="nav-link">Donate</a></li>
+       <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
+       <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+       <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
      </ul>
    </div>
  </div>
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/impact_1.png');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
@@ -85,10 +85,10 @@
   <div class="row">
    <div class="col-md-6 col-lg-3">
     <div class="causes causes-2 text-center ftco-animate">
-     <a href="#" class="img w-100" style="background-image: url(images/causes-1.jpg);"></a>
+     <a href="#" class="img w-100" style="background-image: url(images/impact_1.png);"></a>
      <div class="text p-3">
-       <h2><a href="#">Save the poor children from hunger</a></h2>
-       <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+       <h2><a href="#">Empowering Menstrual Health and Well-being</a></h2>
+       <p>We discuss the importance of menstrual health education that reaches beyond individuals who menstruate.</p>
        <div class="goal mb-4">
          <p><span>$3,800</span> to go</p>
          <div class="progress" style="height:20px">
@@ -101,10 +101,10 @@
  </div>
  <div class="col-md-6 col-lg-3">
   <div class="causes causes-2 text-center ftco-animate">
-   <a href="#" class="img w-100" style="background-image: url(images/causes-2.jpg);"></a>
+   <a href="#" class="img w-100" style="background-image: url(images/impact_2.png);"></a>
    <div class="text p-3">
-     <h2><a href="#">Save the poor children from hunger</a></h2>
-     <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+     <h2><a href="#">Career Advancement in Technology</a></h2>
+     <p>Advancing careers in technology, we empower communities with skills and opportunities.</p>
      <div class="goal mb-4">
        <p><span>$3,800</span> to go</p>
        <div class="progress" style="height:20px">
@@ -117,10 +117,10 @@
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="causes causes-2 text-center ftco-animate">
-   <a href="#" class="img w-100" style="background-image: url(images/causes-3.jpg);"></a>
+   <a href="#" class="img w-100" style="background-image: url(images/impact_3.jpeg);"></a>
    <div class="text p-3">
-     <h2><a href="#">Save the poor children from hunger</a></h2>
-     <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+     <h2><a href="#">Entrepreneurship and Education</a></h2>
+     <p>Empowering communities through entrepreneurship and education for sustainable growth.</p>
      <div class="goal mb-4">
        <p><span>$3,800</span> to go</p>
        <div class="progress" style="height:20px">
@@ -133,10 +133,10 @@
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="causes causes-2 text-center ftco-animate">
-   <a href="#" class="img w-100" style="background-image: url(images/causes-4.jpg);"></a>
+   <a href="#" class="img w-100" style="background-image: url(images/impact_4.png);"></a>
    <div class="text p-3">
-     <h2><a href="#">Save the poor children from hunger</a></h2>
-     <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+     <h2><a href="#">Start-up Capital for Women’s Businesses</a></h2>
+     <p>Provide start-up capital for women's businesses, to launch their entrepreneurial ventures.</p>
      <div class="goal mb-4">
        <p><span>$3,800</span> to go</p>
        <div class="progress" style="height:20px">
@@ -147,13 +147,12 @@
    </div>
  </div>
 </div>
-
 <div class="col-md-6 col-lg-3">
   <div class="causes causes-2 text-center ftco-animate">
-   <a href="#" class="img w-100" style="background-image: url(images/causes-5.jpg);"></a>
+   <a href="#" class="img w-100" style="background-image: url(images/impact_1.png);"></a>
    <div class="text p-3">
-     <h2><a href="#">Save the poor children from hunger</a></h2>
-     <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
+     <h2><a href="#">Empowering Menstrual Health and Well-being</a></h2>
+     <p>We discuss the importance of menstrual health education that reaches beyond individuals who menstruate.</p>
      <div class="goal mb-4">
        <p><span>$3,800</span> to go</p>
        <div class="progress" style="height:20px">
@@ -165,52 +164,52 @@
  </div>
 </div>
 <div class="col-md-6 col-lg-3">
-  <div class="causes causes-2 text-center ftco-animate">
-   <a href="#" class="img w-100" style="background-image: url(images/causes-6.jpg);"></a>
-   <div class="text p-3">
-     <h2><a href="#">Save the poor children from hunger</a></h2>
-     <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-     <div class="goal mb-4">
-       <p><span>$3,800</span> to go</p>
-       <div class="progress" style="height:20px">
-         <div class="progress-bar progress-bar-striped" style="width:82%; height:20px">82%</div>
-       </div>
+<div class="causes causes-2 text-center ftco-animate">
+ <a href="#" class="img w-100" style="background-image: url(images/impact_2.png);"></a>
+ <div class="text p-3">
+   <h2><a href="#">Career Advancement in Technology</a></h2>
+   <p>Advancing careers in technology, we empower communities with skills and opportunities.</p>
+   <div class="goal mb-4">
+     <p><span>$3,800</span> to go</p>
+     <div class="progress" style="height:20px">
+       <div class="progress-bar progress-bar-striped" style="width:82%; height:20px">82%</div>
      </div>
-     <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
    </div>
+   <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
  </div>
 </div>
-<div class="col-md-6 col-lg-3">
-  <div class="causes causes-2 text-center ftco-animate">
-   <a href="#" class="img w-100" style="background-image: url(images/causes-7.jpg);"></a>
-   <div class="text p-3">
-     <h2><a href="#">Save the poor children from hunger</a></h2>
-     <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-     <div class="goal mb-4">
-       <p><span>$3,800</span> to go</p>
-       <div class="progress" style="height:20px">
-         <div class="progress-bar progress-bar-striped" style="width:95%; height:20px">95%</div>
-       </div>
-     </div>
-     <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
-   </div>
- </div>
 </div>
 <div class="col-md-6 col-lg-3">
-  <div class="causes causes-2 text-center ftco-animate">
-   <a href="#" class="img w-100" style="background-image: url(images/causes-8.jpg);"></a>
-   <div class="text p-3">
-     <h2><a href="#">Save the poor children from hunger</a></h2>
-     <p>Far far away, behind the word mountains, far from the countries Vokalia</p>
-     <div class="goal mb-4">
-       <p><span>$3,800</span> to go</p>
-       <div class="progress" style="height:20px">
-         <div class="progress-bar progress-bar-striped" style="width:75%; height:20px">75%</div>
-       </div>
+<div class="causes causes-2 text-center ftco-animate">
+ <a href="#" class="img w-100" style="background-image: url(images/impact_3.jpeg);"></a>
+ <div class="text p-3">
+   <h2><a href="#">Entrepreneurship and Education</a></h2>
+   <p>Empowering communities through entrepreneurship and education for sustainable growth.</p>
+   <div class="goal mb-4">
+     <p><span>$3,800</span> to go</p>
+     <div class="progress" style="height:20px">
+       <div class="progress-bar progress-bar-striped" style="width:95%; height:20px">95%</div>
      </div>
-     <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
    </div>
+   <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
  </div>
+</div>
+</div>
+<div class="col-md-6 col-lg-3">
+<div class="causes causes-2 text-center ftco-animate">
+ <a href="#" class="img w-100" style="background-image: url(images/impact_4.png);"></a>
+ <div class="text p-3">
+   <h2><a href="#">Start-up Capital for Women’s Businesses</a></h2>
+   <p>Provide start-up capital for women's businesses, to launch their entrepreneurial ventures.</p>
+   <div class="goal mb-4">
+     <p><span>$3,800</span> to go</p>
+     <div class="progress" style="height:20px">
+       <div class="progress-bar progress-bar-striped" style="width:75%; height:20px">75%</div>
+     </div>
+   </div>
+   <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
+ </div>
+</div>
 </div>
 </div>
 
@@ -249,7 +248,7 @@
   <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
     <h2 class="footer-heading">Latest News</h2>
     <div class="block-21 mb-4 d-flex">
-      <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
+      <a class="img mr-4 rounded" style="background-image: url(images/impact_1.png);"></a>
       <div class="text">
         <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
         <div class="meta">
@@ -260,7 +259,7 @@
       </div>
     </div>
     <div class="block-21 mb-4 d-flex">
-      <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
+      <a class="img mr-4 rounded" style="background-image: url(images/impact_2.png);"></a>
       <div class="text">
         <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
         <div class="meta">
