--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="volunteer.html" class="nav-link">Impact</a></li>
-					<li class="nav-item"><a href="causes.html" class="nav-link">Our Team</a></li>
+					<li class="nav-item"><a href="causes.html" class="nav-link">Impact</a></li>
+					<li class="nav-item"><a href="volunteer.html" class="nav-link">Our Team</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 					<li class="nav-item cta"><a href="index.html" class="nav-link">Donate</a></li>
@@ -254,7 +254,7 @@
 					<div class="causes causes-2 text-center ftco-animate">
 						<a href="#" class="img w-100" style="background-image: url(images/impact_1.png);"></a>
 						<div class="text p-3">
-							<h2><a href="#">Save the poor children from hunger</a></h2>
+							<h2><a href="#">School Donations</a></h2>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia</p>
 							<div class="goal mb-4">
 								<p><span>$3,800</span> to go</p>
@@ -262,7 +262,6 @@
 									<div class="progress-bar progress-bar-striped" style="width:70%; height:20px">70%</div>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
 						</div>
 					</div>
 				</div>
@@ -278,7 +277,6 @@
 									<div class="progress-bar progress-bar-striped" style="width:82%; height:20px">82%</div>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
 						</div>
 					</div>
 				</div>
@@ -294,7 +292,6 @@
 									<div class="progress-bar progress-bar-striped" style="width:95%; height:20px">95%</div>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
 						</div>
 					</div>
 				</div>
@@ -310,14 +307,13 @@
 									<div class="progress-bar progress-bar-striped" style="width:75%; height:20px">75%</div>
 								</div>
 							</div>
-							<p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
+	<p><a href="#" class="btn btn-light w-10" style="margin-left: 850px;">Donate Now</a></p>
 	<section class="ftco-counter" id="section-counter">
 		<div class="container">
 			<div class="row">
