updated all pages

--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
      <div class="col-md-6 d-flex align-items-center">
       <p class="mb-0 phone pl-md-2">
        <a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-       <a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
+       <a href="#"><span class="fa fa-paper-plane mr-1"></span>  admin@swizimtrust.com</a>
      </p>
    </div>
    <div class="col-md-6 d-flex justify-content-md-end">
@@ -48,7 +48,7 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
  <div class="container">
-   <a class="navbar-brand" href="index.html">Unicare</a>
+   <a class="navbar-brand" href="index.html">Swizimtrust</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
      <span class="oi oi-menu"></span> Menu
    </button>
@@ -57,7 +57,7 @@
      <ul class="navbar-nav ml-auto">
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-       <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
+       <li class="nav-item"><a href="volunteer.html" class="nav-link">Our Team</a></li>
        <li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li>
        <li class="nav-item active"><a href="blog.html" class="nav-link">Blog</a></li>
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -68,7 +68,7 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/dba6a5d5-a810-4f85-aa59-cb069699faba/1660041185095.jpeg?format=1500w');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
@@ -85,88 +85,24 @@
     <div class="row d-flex">
       <div class="col-md-6 col-lg-3 d-flex ftco-animate">
         <div class="blog-entry align-self-stretch">
-          <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+          <a href="blog-single.html" class="block-20" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/1718113705620-EGUJ01R98L2WLH9UPY35/Tinashe+blog+image.jpg?format=1000w');">
           </a>
-          <div class="text p-4">
-           <div class="meta mb-2">
-            <div><a href="#">July 20, 2020</a></div>
-            <div><a href="#">Admin</a></div>
-            <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-          </div>
-          <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-          <p><a href="#" class="btn btn-secondary">Read more</a></p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-      <div class="blog-entry align-self-stretch">
-        <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-        </a>
-        <div class="text p-4">
-         <div class="meta mb-2">
-          <div><a href="#">July 20, 2020</a></div>
-          <div><a href="#">Admin</a></div>
-          <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-        </div>
-        <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-        <p><a href="#" class="btn btn-secondary">Read more</a></p>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-    <div class="blog-entry align-self-stretch">
-      <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-      </a>
-      <div class="text p-4">
-       <div class="meta mb-2">
-        <div><a href="#">July 20, 2020</a></div>
-        <div><a href="#">Admin</a></div>
-        <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-      </div>
-      <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-      <p><a href="#" class="btn btn-secondary">Read more</a></p>
-    </div>
-  </div>
-</div>
-<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-  <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_4.jpg');">
-    </a>
+ 
     <div class="text p-4">
      <div class="meta mb-2">
       <div><a href="#">July 20, 2020</a></div>
       <div><a href="#">Admin</a></div>
       <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-    <p><a href="#" class="btn btn-secondary">Read more</a></p>
-  </div>
-</div>
-</div>
-
-<div class="col-md-6 col-lg-3 d-flex ftco-animate">
-  <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-    </a>
-    <div class="text p-4">
-     <div class="meta mb-2">
-      <div><a href="#">July 20, 2020</a></div>
-      <div><a href="#">Admin</a></div>
-      <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
-    </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <h3 class="heading"><a href="#">(Learner story)</a></h3>
+    <p>Unleashing Potential: A Remarkable Journey at the Bulawayo nook center </p>
     <p><a href="#" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
   <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_4.jpg');">
+    <a href="blog-single.html" class="block-20" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/e4831e2a-c8dc-4b49-a69c-abcf65c1aa98/1715072463637.jpg?format=500w');">
     </a>
     <div class="text p-4">
      <div class="meta mb-2">
@@ -174,15 +110,15 @@
       <div><a href="#">Admin</a></div>
       <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <h3 class="heading"><a href="#">Innovation Centre (Nook) </a></h3>
+    <p>Nooks provide a platform for community members to explore their passions </p>
     <p><a href="#" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
   <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_5.jpg');">
+    <a href="blog-single.html" class="block-20" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/b5ca7b0e-bbca-4025-aa2a-b75b085eec30/Picture+1.jpg?format=1500w');">
     </a>
     <div class="text p-4">
      <div class="meta mb-2">
@@ -190,15 +126,15 @@
       <div><a href="#">Admin</a></div>
       <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <h3 class="heading"><a href="#">Agriculture & sustainability</a></h3>
+    <p>Revolutionising Agriculture with Hydroponics at Bulawayo Nook</p>
     <p><a href="#" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
 </div>
 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
   <div class="blog-entry align-self-stretch">
-    <a href="blog-single.html" class="block-20" style="background-image: url('images/image_6.jpg');">
+    <a href="blog-single.html" class="block-20" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/caef56f7-645f-4389-bd2a-fc88dd6363e0/Picture+3.jpg?format=500w');">
     </a>
     <div class="text p-4">
      <div class="meta mb-2">
@@ -206,8 +142,8 @@
       <div><a href="#">Admin</a></div>
       <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
     </div>
-    <h3 class="heading"><a href="#">Foods &amp; Water Need in Africa</a></h3>
-    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+    <h3 class="heading"><a href="#">Agriculture</a></h3>
+    <p>Expanding Our Horizons: Pioneering Smart Agriculture</p>
     <p><a href="#" class="btn btn-secondary">Read more</a></p>
   </div>
 </div>
@@ -285,9 +221,9 @@
     <h2 class="footer-heading">Have a Questions?</h2>
     <div class="block-23 mb-3">
       <ul>
-        <li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+        <li><span class="icon fa fa-map"></span><span class="text">Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe </span></li>
         <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">info@yourdomain.com</span></a></li>
+        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">admin@swizimtrust.com</span></a></li>
       </ul>
     </div>
   </div>
