--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 				<div class="col-md-6 d-flex align-items-center">
 					<p class="mb-0 phone pl-md-2">
 						<a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-						<a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
+						<a href="#"><span class="fa fa-paper-plane mr-1"></span> admin@Swizimtrust.com</a>
 					</p>
 				</div>
 				<div class="col-md-6 d-flex justify-content-md-end">
@@ -48,7 +48,7 @@
 	</div>
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Unicare</a>
+			<a class="navbar-brand" href="index.html">Swizimtrust</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
@@ -57,7 +57,7 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
+					<li class="nav-item"><a href="volunteer.html" class="nav-link">Our Team</a></li>
 					<li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li>
 					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 					<li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -68,7 +68,7 @@
 	</nav>
 	<!-- END nav -->
 	
-	<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+	<section class="hero-wrap hero-wrap-2" style="background-image: url('https://www.clearinghouseforsport.gov.au/__data/assets/image/0005/995018/Major-Event-Community-Engagement-09113-03_thumb.jpeg');" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row no-gutters slider-text align-items-end">
@@ -92,7 +92,7 @@
 										<span class="fa fa-map-marker"></span>
 									</div>
 									<div class="text">
-										<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+										<p><span>Address:</span>Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe </p>
 									</div>
 								</div>
 							</div>
@@ -112,7 +112,7 @@
 										<span class="fa fa-paper-plane"></span>
 									</div>
 									<div class="text">
-										<p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+										<p><span>Email:</span> <a href="mailto:info@yoursite.com">admin@swizimtrust.com</a></p>
 									</div>
 								</div>
 							</div>
@@ -168,7 +168,7 @@
 								</div>
 							</div>
 							<div class="col-md-5 d-flex align-items-stretch">
-								<div class="info-wrap w-100 p-5 img" style="background-image: url(images/about-3.jpg);">
+								<div class="info-wrap w-100 p-5 img" style="background-image: url(https://s-i.huffpost.com/gen/4060600/images/o-HAPPY-KID-facebook.jpg);">
 								</div>
 							</div>
 						</div>
@@ -185,7 +185,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-					<h2 class="footer-heading">Unicare.</h2>
+					<h2 class="footer-heading">Swizimtrust.</h2>
 					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 					<ul class="ftco-footer-social p-0">
 						<li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
@@ -234,9 +234,9 @@
 					<h2 class="footer-heading">Have a Questions?</h2>
 					<div class="block-23 mb-3">
 						<ul>
-							<li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+							<li><span class="icon fa fa-map"></span><span class="text">Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe</span></li>
 							<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-							<li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">info@yourdomain.com</span></a></li>
+							<li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">admin@swizimtrust.com</span></a></li>
 						</ul>
 					</div>
 				</div>
