--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
      <ul class="navbar-nav ml-auto">
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
        <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-       <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
+       <li class="nav-item"><a href="volunteer.html" class="nav-link">Our Team</a></li>
        <li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li>
        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -68,7 +68,7 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/1712176235124-RDYRE1KK3S3XRCAQAR0O/DSC_0105.JPG?format=1500w');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text justify-content-center"></div>
@@ -250,9 +250,9 @@
     <h2 class="footer-heading">Have a Questions?</h2>
     <div class="block-23 mb-3">
       <ul>
-        <li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+        <li><span class="icon fa fa-map"></span><span class="text"> Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe</span></li>
         <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">info@yourdomain.com</span></a></li>
+        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text"> admin@swizimtrust.com</span></a></li>
       </ul>
     </div>
   </div>
