--- a/causes.html
+++ b/causes.html
@@ -30,7 +30,7 @@
      <div class="col-md-6 d-flex align-items-center">
       <p class="mb-0 phone pl-md-2">
        <a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-       <a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
+       <a href="#"><span class="fa fa-paper-plane mr-1"></span> admin@swizimtrust.com </a>
      </p>
    </div>
    <div class="col-md-6 d-flex justify-content-md-end">
@@ -48,7 +48,7 @@
 </div>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
  <div class="container">
-   <a class="navbar-brand" href="index.html">Unicare</a>
+   <a class="navbar-brand" href="index.html">Swizimtrust</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
      <span class="oi oi-menu"></span> Menu
    </button>
@@ -59,7 +59,7 @@
        <li class="nav-item active"><a href="causes.html" class="nav-link">Causes</a></li>
        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
        <li class="nav-item cta"><a href="contact.html" class="nav-link">Donate</a></li>
-       <li class="nav-item"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
+       <li class="nav-item"><a href="volunteer.html" class="nav-link">Our Team</a></li>
        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
      </ul>
@@ -85,10 +85,10 @@
   <div class="row">
    <div class="col-md-6 col-lg-3">
     <div class="causes causes-2 text-center ftco-animate">
-     <a href="#" class="img w-100" style="background-image: url(images/impact_1.png);"></a>
+     <a href="#" class="img w-100" style="background-image: url(https://th.bing.com/th/id/OIP.lSXbH9LYyO-_IxcrqxphlgHaD4?rs=1&pid=ImgDetMain);"></a>
      <div class="text p-3">
        <h2><a href="#">Empowering Menstrual Health and Well-being</a></h2>
-       <p>We discuss the importance of menstrual health education that reaches beyond individuals who menstruate.</p>
+       <p>We discuss the importance of menstrual health education .</p>
        <div class="goal mb-4">
          <p><span>$3,800</span> to go</p>
          <div class="progress" style="height:20px">
@@ -147,71 +147,7 @@
    </div>
  </div>
 </div>
-<div class="col-md-6 col-lg-3">
-  <div class="causes causes-2 text-center ftco-animate">
-   <a href="#" class="img w-100" style="background-image: url(images/impact_1.png);"></a>
-   <div class="text p-3">
-     <h2><a href="#">Empowering Menstrual Health and Well-being</a></h2>
-     <p>We discuss the importance of menstrual health education that reaches beyond individuals who menstruate.</p>
-     <div class="goal mb-4">
-       <p><span>$3,800</span> to go</p>
-       <div class="progress" style="height:20px">
-         <div class="progress-bar progress-bar-striped" style="width:70%; height:20px">70%</div>
-       </div>
-     </div>
-     <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
-   </div>
- </div>
-</div>
-<div class="col-md-6 col-lg-3">
-<div class="causes causes-2 text-center ftco-animate">
- <a href="#" class="img w-100" style="background-image: url(images/impact_2.png);"></a>
- <div class="text p-3">
-   <h2><a href="#">Career Advancement in Technology</a></h2>
-   <p>Advancing careers in technology, we empower communities with skills and opportunities.</p>
-   <div class="goal mb-4">
-     <p><span>$3,800</span> to go</p>
-     <div class="progress" style="height:20px">
-       <div class="progress-bar progress-bar-striped" style="width:82%; height:20px">82%</div>
-     </div>
-   </div>
-   <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
- </div>
-</div>
-</div>
-<div class="col-md-6 col-lg-3">
-<div class="causes causes-2 text-center ftco-animate">
- <a href="#" class="img w-100" style="background-image: url(images/impact_3.jpeg);"></a>
- <div class="text p-3">
-   <h2><a href="#">Entrepreneurship and Education</a></h2>
-   <p>Empowering communities through entrepreneurship and education for sustainable growth.</p>
-   <div class="goal mb-4">
-     <p><span>$3,800</span> to go</p>
-     <div class="progress" style="height:20px">
-       <div class="progress-bar progress-bar-striped" style="width:95%; height:20px">95%</div>
-     </div>
-   </div>
-   <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
- </div>
-</div>
-</div>
-<div class="col-md-6 col-lg-3">
-<div class="causes causes-2 text-center ftco-animate">
- <a href="#" class="img w-100" style="background-image: url(images/impact_4.png);"></a>
- <div class="text p-3">
-   <h2><a href="#">Start-up Capital for Women’s Businesses</a></h2>
-   <p>Provide start-up capital for women's businesses, to launch their entrepreneurial ventures.</p>
-   <div class="goal mb-4">
-     <p><span>$3,800</span> to go</p>
-     <div class="progress" style="height:20px">
-       <div class="progress-bar progress-bar-striped" style="width:75%; height:20px">75%</div>
-     </div>
-   </div>
-   <p><a href="#" class="btn btn-light w-100">Donate Now</a></p>
- </div>
-</div>
-</div>
-</div>
+
 
 <div class="row mt-5">
   <div class="col text-center">
@@ -236,8 +172,8 @@
  <div class="container">
   <div class="row">
    <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-    <h2 class="footer-heading">Unicare.</h2>
-    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+    <h2 class="footer-heading">Swizimtrust</h2>
+    <p>Swizimtrust - Empowering Communities for Holistic Impact.</p>
     <ul class="ftco-footer-social p-0">
       <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
       <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
@@ -261,7 +197,7 @@
     <div class="block-21 mb-4 d-flex">
       <a class="img mr-4 rounded" style="background-image: url(images/impact_2.png);"></a>
       <div class="text">
-        <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+        <h3 class="heading"><a href="#">Swizimtrust - Empowering Communities for Holistic Impact</a></h3>
         <div class="meta">
           <div><a href="#">Jul 20, 2020</a></div>
           <div><a href="#">Admin</a></div>
@@ -285,9 +221,9 @@
     <h2 class="footer-heading">Have a Questions?</h2>
     <div class="block-23 mb-3">
       <ul>
-        <li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+        <li><span class="icon fa fa-map"></span><span class="text">Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe</span></li>
         <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">info@yourdomain.com</span></a></li>
+        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">admin@swizimtrust.com</span></a></li>
       </ul>
     </div>
   </div>
