--- a/volunteer.html
+++ b/volunteer.html
@@ -30,7 +30,7 @@
      <div class="col-md-6 d-flex align-items-center">
       <p class="mb-0 phone pl-md-2">
        <a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-       <a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
+       <a href="#"><span class="fa fa-paper-plane mr-1"></span> admin@swizimtrust.com </a>
      </p>
    </div>
    <div class="col-md-6 d-flex justify-content-md-end">
@@ -57,7 +57,7 @@
      <ul class="navbar-nav ml-auto">
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-       <li class="nav-item active"><a href="volunteer.html" class="nav-link">Volunteer</a></li>
+       <li class="nav-item active"><a href="volunteer.html" class="nav-link">Our Team</a></li>
        <li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li>
        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -68,13 +68,13 @@
 </nav>
 <!-- END nav -->
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');" data-stellar-background-ratio="0.5">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('https://img.freepik.com/premium-photo/fist-motivation-team-support-netball-training-game-screaming-with-hope-faith-sports-court-teamwork-fitness-coach-group-excited-athlete-girls-with-pride-solidarity-together_590464-157422.jpg');" data-stellar-background-ratio="0.5">
   <div class="overlay"></div>
   <div class="container">
     <div class="row no-gutters slider-text align-items-end">
       <div class="col-md-9 ftco-animate pb-5">
        <p class="breadcrumbs mb-2"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span>Volunteer <i class="ion-ios-arrow-forward"></i></span></p>
-       <h1 class="mb-0 bread">Volunteer</h1>
+       <h1 class="mb-0 bread">Our Team</h1>
      </div>
    </div>
  </div>
@@ -84,26 +84,26 @@
  <div class="container">
   <div class="row justify-content-center pb-5 mb-3">
     <div class="col-md-7 heading-section text-center ftco-animate">
-     <span class="subheading">Volunteer</span>
-     <h2>Our Expert Volunteer</h2>
+     <span class="subheading">Our Teamr</span>
+     <h2>Our Team</h2>
    </div>
  </div>
  <div class="row">
    <div class="col-md-6 col-lg-3">
     <div class="volunteer">
-     <div class="img" style="background-image: url(images/team-1.jpg);"></div>
+     <div class="img" style="background-image: url(https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/872b682b-0df8-45bd-96ee-dcf595107ed5/1690543788517.jpeg?format=500w);"></div>
      <div class="text text-1">
-      <h3>Alex Martin</h3>
-      <span>Volunteer</span>
+      <h3>Dr. Fungai (Fufu) Mettler</h3>
+      <span>Co-founder</span>
     </div>
   </div>
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="volunteer">
-   <div class="img" style="background-image: url(images/team-2.jpg);"></div>
+   <div class="img" style="background-image: url(https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/7f5e11d9-61ce-4049-8a76-86e0e1316e36/5f946145130b6058d1829500_Luki+pic-p-500.png?format=1000w);"></div>
    <div class="text text-2">
-    <h3>Cedrick Brown</h3>
-    <span>Volunteer</span>
+    <h3>Lukas (Luki) Mettler</h3>
+    <span>Co-founder</span>
   </div>
 </div>
 </div>
@@ -118,47 +118,47 @@
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="volunteer">
-   <div class="img" style="background-image: url(images/team-4.jpg);"></div>
+   <div class="img" style="background-image: url(https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/e18c59b2-a342-4ba3-a608-c4a08463f1c8/c5c4f3a0-0dc4-43f2-b6ed-3fe09e410325.JPG?format=750w);"></div>
    <div class="text text-4">
-    <h3>Max Love</h3>
-    <span>Volunteer</span>
+    <h3>Cornelius (Nyerex) Nyereyemhuka</h3>
+    <span>Director</span>
   </div>
 </div>
 </div>
 
 <div class="col-md-6 col-lg-3">
   <div class="volunteer">
-   <div class="img" style="background-image: url(images/team-5.jpg);"></div>
+   <div class="img" style="background-image: url(https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/739ee8ec-7d87-46b1-b2d3-b0f79ee17c24/69d115e7-445d-4073-a174-67c516901989.JPG?format=500w);"></div>
    <div class="text text-4">
-    <h3>Alex Martin</h3>
-    <span>Volunteer</span>
+    <h3>Simbarashe (Simba) Mukuku</h3>
+    <span>Director</span>
   </div>
 </div>
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="volunteer">
-   <div class="img" style="background-image: url(images/team-6.jpg);"></div>
+   <div class="img" style="background-image: url(https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/563ace28-6b3a-4fe0-89a4-0bc9530f7257/e90adf04-6d5e-4529-ada9-362a4fa0f000.JPG?format=500w);"></div>
    <div class="text text-1">
-    <h3>Cedrick Brown</h3>
-    <span>Volunteer</span>
+    <h3>Chengetai (Chenge) Jindu</h3>
+    <span>Director</span>
   </div>
 </div>
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="volunteer">
-   <div class="img" style="background-image: url(images/team-7.jpg);"></div>
+   <div class="img" style="background-image: url(https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/8afdacca-f95d-4aea-8336-b328919476f9/IMG_5007.jpg?format=500w);"></div>
    <div class="text text-2">
-    <h3>John Wick</h3>
-    <span>Volunteer</span>
+    <h3>Savvannah (Savvy) Smith</h3>
+    <span>Lead Communications</span>
   </div>
 </div>
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="volunteer">
-   <div class="img" style="background-image: url(images/team-8.jpg);"></div>
+   <div class="img" style="background-image: url(https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/45cf30bf-f725-4d96-a866-de3dc72400d5/DSC_0304.jpg?format=750w);"></div>
    <div class="text text-3">
-    <h3>Max Love</h3>
-    <span>Volunteer</span>
+    <h3>Anesu Leon Gundani</h3>
+    <span>Projects Implementation and Evaluation Lead</span>
   </div>
 </div>
 </div>
@@ -235,10 +235,9 @@
     <h2 class="footer-heading">Have a Questions?</h2>
     <div class="block-23 mb-3">
       <ul>
-        <li><span class="icon fa fa-map"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+        <li><span class="icon fa fa-map"></span><span class="text">Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe</span></li>
         <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">info@yourdomain.com</span></a></li>
-      </ul>
+        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">
     </div>
   </div>
 </div>
