--- a/volunteer.html
+++ b/volunteer.html
@@ -109,10 +109,10 @@
 </div>
 <div class="col-md-6 col-lg-3">
   <div class="volunteer">
-   <div class="img" style="background-image: url(images/team-3.jpg);"></div>
+   <div class="img" style="background-image: url(https://images.squarespace-cdn.com/content/v1/660daf918f03e47e9b7b1703/5994692c-4f17-44bf-a287-5f2025e34c02/IMG_5008.jpg?format=500w);"></div>
    <div class="text text-3">
-    <h3>John Wick</h3>
-    <span>Volunteer</span>
+    <h3>Peace (nguPeace Magents) Gumbo</h3>
+    <span>Community Engagement and Outreach Lead</span>
   </div>
 </div>
 </div>
