Changed the form on the home page to be a volunteer form.

--- a/index.html
+++ b/index.html
@@ -97,11 +97,7 @@
 					<div class="donation-wrap">
 						<div class="total-donate d-flex align-items-center">
 							<span class="fa flaticon-cleaning"></span>
-							<h4>Donation Campaign <br>are running</h4>
-							<p class="d-flex align-items-center">
-								<span>$</span>
-								<span class="number" data-number="24781">0</span>
-							</p>
+							<h4>BECOME A VOLUNTEER</h4>
 						</div>
 						<form action="#" class="appointment">
 							<div class="row">
@@ -125,20 +121,11 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<label for="name">Select Causes</label>
+										<label for="name">Phone Number</label>
 										<div class="form-field">
 											<div class="select-wrap">
 												<div class="icon"><span class="fa fa-chevron-down"></span></div>
 												<select name="" id="" class="form-control">
-													<option value=""></option>
-													<option value="">House Washing</option>
-													<option value="">Roof Cleaning</option>
-													<option value="">Driveway Cleaning</option>
-													<option value="">Gutter Cleaning</option>
-													<option value="">Patio Cleaning</option>
-													<option value="">Building Cleaning</option>
-													<option value="">Concrete Cleaning</option>
-													<option value="">Sidewal Cleaning</option>
 												</select>
 											</div>
 										</div>
@@ -146,23 +133,14 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<label for="name">Amount</label>
-										<div class="input-wrap">
-											<div class="icon"><span class="fa fa-money"></span></div>
-											<input type="text" class="form-control" placeholder="$5">
-										</div>
-									</div>
-								</div>
-								<div class="col-md-12">
-									<div class="form-group">
-										<label for="name">Payment Method</label>
+										<label for="name">Availability</label>
 										<div class="d-lg-flex">
 											<div class="form-radio mr-3">
 												<div class="radio">
 													<label>
 														<input type="radio" name="radio-input" checked>
 														<span class="checkmark"></span>
-														<span class="fill-control-description">Credit Card</span>
+														<span class="fill-control-description">Weekdays</span>
 													</label>
 												</div>
 											</div>
@@ -171,7 +149,7 @@
 													<label>
 														<input type="radio" name="radio-input">
 														<span class="checkmark"></span>
-														<span class="fill-control-description">Paypal</span>
+														<span class="fill-control-description">Weekends</span>
 													</label>
 												</div>
 											</div>
@@ -180,7 +158,7 @@
 													<label>
 														<input type="radio" name="radio-input">
 														<span class="checkmark"></span>
-														<span class="fill-control-description">Payoneer</span>
+														<span class="fill-control-description">Occassionally</span>
 													</label>
 												</div>
 											</div>
@@ -189,7 +167,7 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-										<input type="submit" value="Donate Now" class="btn btn-secondary py-3 px-4">
+										<input type="submit" value="Volunteer Now" class="btn btn-secondary py-3 px-4">
 									</div>
 								</div>
 							</div>
@@ -504,10 +482,6 @@
 			</div>
 			<div class="row mt-5">
 				<div class="col-md-12 text-center">
-
-					<p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 					</div>
 				</div>
 			</div>
