Removed the banner and edited the navbar and footer across all pages.

--- a/index.html
+++ b/index.html
@@ -24,31 +24,9 @@
 </head>
 <body>
 
-	<div class="wrap">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 d-flex align-items-center">
-					<p class="mb-0 phone pl-md-2">
-						<a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-						<a href="#"><span class="fa fa-paper-plane mr-1"></span> admin@swizim.co.za</a>
-					</p>
-				</div>
-				<div class="col-md-6 d-flex justify-content-md-end">
-					<div class="social-media">
-						<p class="mb-0 d-flex">
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-							<a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">SWIZIMTRUST</a>
+			<a class="navbar-brand" href="index.html">Swizimtrust</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
@@ -57,6 +35,7 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="causes.html" class="nav-link">Impact</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 					<li class="nav-item"><a href="volunteer.html" class="nav-link">Our Team</a></li>
 					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -72,10 +51,9 @@
 			<div class="slider-item js-fullheight" style="background-image:url(https://th.bing.com/th/id/R.32c05e6bc4fa4f7bc34ffc88a0d87a24?rik=lnqNkv%2fffeF7tg&pid=ImgRaw&r=0);">
 				<div class="overlay-1"></div><div class="overlay-2"></div><div class="overlay-3"></div><div class="overlay-4"></div>
 				<div class="container">
-					<div class="row no-gutters slider-text js-fullheight align-items-center">
-						<div class="col-md-10 col-lg-7 ftco-animate">
+					<div class="row no-gutters slider-text js-fullheight align-items-center" style="margin-top: 10px;">
+						<div class="col-md-10 col-lg-7 ftco-animate" style="margin-top: 10px;">
 							<div class="text w-100">
-								<h2>We are an impact-driven organization</h2>
 								<h1 class="mb-3">Advancing community development in Zimbabwe.</h1>
 								<div class="d-flex meta">
 									<div class=""><p class="mb-0"><a href="#" class="btn btn-secondary py-3 px-2 px-md-4">Blog</a></p></div>
@@ -213,7 +191,6 @@
 							</div>
 						</div>
 					</div>
-					<p><a href="#" class="btn btn-secondary btn-outline-secondary">Become A Volunteer</a></p>
 				</div>
 			</div>
 		</div>
@@ -284,28 +261,6 @@
 									<span>Dedicated Donors</span>
 								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-	<section class="ftco-section ftco-no-pt">
-		<div class="container">
-			<div class="row justify-content-center pb-5 mb-3">
-				<div class="col-md-7 heading-section text-center ftco-animate">
-					<h2>Our vission and Mission</h2>
-				</div>
-			</div>
-			
-				<div class="text-center">
-					<h2>Our vision is a testament to our unwavering commitment and proven track record in creating thriving and resilient communities.<br> With our extensive experience and expertise, we have successfully implemented holistic approaches to community development,<br>addressing key challenges such as poverty, inequality, and social injustice. </h2>
-				</div>		
-
-								</span>
-					
 						</div>
 					</div>
 				</div>
