--- a/volunteer.html
+++ b/volunteer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Unicare - Free Bootstrap 4 Template by Colorlib</title>
+  <title>SWIZIMTRUST</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -24,31 +24,9 @@
 </head>
 <body>
 
-  <div class="wrap">
-   <div class="container">
-    <div class="row">
-     <div class="col-md-6 d-flex align-items-center">
-      <p class="mb-0 phone pl-md-2">
-       <a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-       <a href="#"><span class="fa fa-paper-plane mr-1"></span> admin@swizimtrust.com </a>
-     </p>
-   </div>
-   <div class="col-md-6 d-flex justify-content-md-end">
-    <div class="social-media">
-     <p class="mb-0 d-flex">
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-twitter"><i class="sr-only">Twitter</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-      <a href="#" class="d-flex align-items-center justify-content-center"><span class="fa fa-dribbble"><i class="sr-only">Dribbble</i></span></a>
-    </p>
-  </div>
-</div>
-</div>
-</div>
-</div>
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
  <div class="container">
-   <a class="navbar-brand" href="index.html">Unicare</a>
+   <a class="navbar-brand" href="index.html">Swizimtrust</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
      <span class="oi oi-menu"></span> Menu
    </button>
@@ -56,12 +34,12 @@
    <div class="collapse navbar-collapse" id="ftco-nav">
      <ul class="navbar-nav ml-auto">
        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-       <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-       <li class="nav-item active"><a href="volunteer.html" class="nav-link">Our Team</a></li>
-       <li class="nav-item"><a href="causes.html" class="nav-link">Causes</a></li>
-       <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-       <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-       <li class="nav-item cta"><a href="contact.html" class="nav-link">Donate</a></li>
+					<li class="nav-item"><a href="causes.html" class="nav-link">Impact</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+					<li class="nav-item active"><a href="volunteer.html" class="nav-link">Our Team</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item cta"><a href="index.html" class="nav-link">Donate</a></li>
      </ul>
    </div>
  </div>
@@ -183,74 +161,71 @@
 
 
 <footer class="footer">
- <div class="container">
-  <div class="row">
-   <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-    <h2 class="footer-heading">Unicare.</h2>
-    <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-    <ul class="ftco-footer-social p-0">
-      <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
-      <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
-      <li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
-    </ul>
-    <p><a href="#" class="btn btn-quarternary">Donate Now</a></p>
-  </div>
-  <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-    <h2 class="footer-heading">Latest News</h2>
-    <div class="block-21 mb-4 d-flex">
-      <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
-      <div class="text">
-        <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-        <div class="meta">
-          <div><a href="#">Jul 20, 2020</a></div>
-          <div><a href="#">Admin</a></div>
-          <div><a href="#">19</a></div>
-        </div>
-      </div>
-    </div>
-    <div class="block-21 mb-4 d-flex">
-      <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
-      <div class="text">
-        <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
-        <div class="meta">
-          <div><a href="#">Jul 20, 2020</a></div>
-          <div><a href="#">Admin</a></div>
-          <div><a href="#">19</a></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
-    <h2 class="footer-heading">Quick Links</h2>
-    <ul class="list-unstyled">
-      <li><a href="#" class="py-2 d-block">Home</a></li>
-      <li><a href="#" class="py-2 d-block">About</a></li>
-      <li><a href="#" class="py-2 d-block">Causes</a></li>
-      <li><a href="#" class="py-2 d-block">New Campaigns</a></li>
-      <li><a href="#" class="py-2 d-block">Blog</a></li>
-      <li><a href="#" class="py-2 d-block">Contact</a></li>
-    </ul>
-  </div>
-  <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
-    <h2 class="footer-heading">Have a Questions?</h2>
-    <div class="block-23 mb-3">
-      <ul>
-        <li><span class="icon fa fa-map"></span><span class="text">Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe</span></li>
-        <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-        <li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">
-    </div>
-  </div>
-</div>
-<div class="row mt-5">
-  <div class="col-md-12 text-center">
-
-    <p class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-    </div>
-  </div>
-</div>
-</footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+					<h2 class="footer-heading">Swizimtrust</h2>
+					<p>Our vision reflects our strong commitment and successful history in building resilient communities through holistic approaches, addressing challenges like poverty, inequality, and social injustice.</p>
+					<ul class="ftco-footer-social p-0">
+						<li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Twitter"><span class="fa fa-twitter"></span></a></li>
+						<li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Facebook"><span class="fa fa-facebook"></span></a></li>
+						<li class="ftco-animate"><a href="#" data-toggle="tooltip" data-placement="top" title="Instagram"><span class="fa fa-instagram"></span></a></li>
+					</ul>
+					<p><a href="#" class="btn btn-quarternary">Donate Now</a></p>
+				</div>
+				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+					<h2 class="footer-heading">Latest Blog</h2>
+					<div class="block-21 mb-4 d-flex">
+						<a class="img mr-4 rounded" style="background-image: url(images/blog-img2.jpg);"></a>
+						<div class="text">
+							<h3 class="heading"><a href="#">Breaking the Stigma: Empowering Menstrual Health and Well-being</a></h3>
+							<div class="meta">
+								<div><a href="#">Jul 20, 2020</a></div>
+								<div><a href="#">Admin</a></div>
+								<div><a href="#">19</a></div>
+							</div>
+						</div>
+					</div>
+					<div class="block-21 mb-4 d-flex">
+						<a class="img mr-4 rounded" style="background-image: url(images/blog-img1.jpg);"></a>
+						<div class="text">
+							<h3 class="heading"><a href="#">Unleashing Potential: A Remarkable Journey at the Bulawayo nook center</a></h3>
+							<div class="meta">
+								<div><a href="#">Jul 20, 2020</a></div>
+								<div><a href="#">Admin</a></div>
+								<div><a href="#">19</a></div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
+					<h2 class="footer-heading">Quick Links</h2>
+					<ul class="list-unstyled">
+						<li><a href="#" class="py-2 d-block">Home</a></li>
+						<li><a href="#" class="py-2 d-block">About</a></li>
+						<li><a href="#" class="py-2 d-block">Causes</a></li>
+						<li><a href="#" class="py-2 d-block">Our Team</a></li>
+						<li><a href="#" class="py-2 d-block">Blog</a></li>
+						<li><a href="#" class="py-2 d-block">Contact</a></li>
+					</ul>
+				</div>
+				<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
+					<h2 class="footer-heading">Have a Questions?</h2>
+					<div class="block-23 mb-3">
+						<ul>
+							<li><span class="icon fa fa-map"></span><span class="text">	Stand Number 3482, Nkumumane 5, Bulawayo, Zimbabwe</span></li>
+							<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+							<li><a href="#"><span class="icon fa fa-paper-plane"></span><span class="text">admin@swizimtrust.com</span></a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-md-12 text-center">
+					</div>
+				</div>
+			</div>
+		</footer>
 
 
 
